# geometry

./: CMakeLists.txt  package.xml  wks.yml
include/rhoban_geometry/: bounding_box.h  circle.h  filtered_points_clusters.h  point.h  point_cluster.h  ray2d.h  segment.h
src/rhoban_geometry/: Sources.cmake  bounding_box.cpp  circle.cpp  filtered_points_clusters.cpp  point.cpp  point_cluster.cpp  ray2d.cpp  segment.cpp
tests/: ray2d.cpp
